<resources>
    <string name="app_name">Australia Quiz App</string>

    <!-- Title of quiz [CHAR LIMIT=NONE] -->
    <string name="gday_mate">G\'day, mate!</string>

    <!-- Subtitle of quiz [CHAR LIMIT=NONE] -->
    <string name="test_knowledge">Are you ready to test your knowledge of Australia?</string>

    <!-- Button to begin quiz [CHAR LIMIT=NONE]-->
    <string name="start_quiz">Start quiz</string>

    <!-- Question 1 of the quiz [CHAR LIMIT=NONE]-->
    <string name="question_1">1. What is the capital city of Australia?</string>

    <!-- Answer field for question 1 of the quiz [CHAR LIMIT=NONE]-->
    <string name="question_1_answer">Type your answer here</string>

    <!-- Question 2 of the quiz [CHAR LIMIT=NONE]-->
    <string name="question_2">2. How many states does Australia have?</string>

    <!-- Radio button 1 for question 2 of the quiz [CHAR LIMIT=NONE]-->
    <string name="q2_radio_button_1">6</string>

    <!-- Radio button 2 for question 2 of the quiz [CHAR LIMIT=NONE]-->
    <string name="q2_radio_button_2">7</string>

    <!-- Radio button 3 for question 2 of the quiz [CHAR LIMIT=NONE]-->
    <string name="q2_radio_button_3">8</string>

    <!-- Question 3 of the quiz [CHAR LIMIT=NONE]-->
    <string name="question_3">3. What is a quandong?</string>

    <!-- Radio button 1 for question 3 of the quiz [CHAR LIMIT=NONE]-->
    <string name="q3_radio_button_1">A fruit</string>

    <!-- Radio button 2 for question 3 of the quiz [CHAR LIMIT=NONE]-->
    <string name="q3_radio_button_2">An animal</string>

    <!-- Radio button 3 for question 3 of the quiz [CHAR LIMIT=NONE]-->
    <string name="q3_radio_button_3">A musical instrument</string>

    <!-- Question 4 of the quiz [CHAR LIMIT=NONE]-->
    <string name="question_4">4. Which of the following swimwear brands are originally from Australia? Tick all the correct answers.</string>

    <!-- Check box 1 for question 4 of the quiz [CHAR LIMIT=NONE]-->
    <string name="billabong">Billabong</string>

    <!-- Check box 2 for question 4 of the quiz [CHAR LIMIT=NONE]-->
    <string name="quiksilver">Quiksilver</string>

    <!-- Check box 3 for question 4 of the quiz [CHAR LIMIT=NONE]-->
    <string name="roxy">Roxy</string>

    <!-- Question 5 of the quiz [CHAR LIMIT=NONE]-->
    <string name="question_5">5. What date is Australia Day?</string>

    <!-- Radio button 1 for question 5 of the quiz [CHAR LIMIT=NONE]-->
    <string name="q5_radio_button_1">January 25th</string>

    <!-- Radio button 2 for question 5 of the quiz [CHAR LIMIT=NONE]-->
    <string name="q5_radio_button_2">January 26th</string>

    <!-- Radio button 3 for question 5 of the quiz [CHAR LIMIT=NONE]-->
    <string name="q5_radio_button_3">January 27th</string>

    <!-- Question 6 of the quiz [CHAR LIMIT=NONE]-->
    <string name="question_6">6. When did the first settlers arrive to Australia?</string>

    <!-- Radio button 1 for question 6 of the quiz [CHAR LIMIT=NONE]-->
    <string name="q6_radio_button_1">1787</string>

    <!-- Radio button 2 for question 6 of the quiz [CHAR LIMIT=NONE]-->
    <string name="q6_radio_button_2">1788</string>

    <!-- Radio button 3 for question 6 of the quiz [CHAR LIMIT=NONE]-->
    <string name="q6_radio_button_3">1878</string>

    <!-- Question 7 of the quiz [CHAR LIMIT=NONE]-->
    <string name="question_7">7. Which one of the following is a quokka?</string>

    <!-- Radio button 1 for question 7 of the quiz [CHAR LIMIT=NONE]-->
    <string name="q7_radio_button_1"></string>

    <!-- Radio button 2 for question 7 of the quiz [CHAR LIMIT=NONE]-->
    <string name="q7_radio_button_2"></string>

    <!-- Radio button 3 for question 7 of the quiz [CHAR LIMIT=NONE]-->
    <string name="q7_radio_button_3"></string>

    <!-- Question 8 of the quiz [CHAR LIMIT=NONE]-->
    <string name="question_8">8. In which country is the largest population of Australian expats?</string>

    <!-- Radio button 1 for question 8 of the quiz [CHAR LIMIT=NONE]-->
    <string name="q8_radio_button_1">America</string>

    <!-- Radio button 2 for question 8 of the quiz [CHAR LIMIT=NONE]-->
    <string name="q8_radio_button_2">Asia</string>

    <!-- Radio button 3 for question 8 of the quiz [CHAR LIMIT=NONE]-->
    <string name="q8_radio_button_3">Europe</string>

    <!-- Button to finish quiz [CHAR LIMIT=NONE]-->
    <string name="submit">Submit</string>

    <!-- Text saying the quiz has been finished [CHAR LIMIT=NONE]-->
    <string name="congratulations">Congratulations!\nYou finished the quiz.</string>

    <!-- Text in button to calculate result [CHAR LIMIT=20]-->
    <string name="calculate">CALCULATE RESULT</string>

    <!-- Text in button to calculate result [CHAR LIMIT=20]-->
    <string name="restart">RESTART QUIZ</string>

</resources>