<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context="com.example.android.australiaquiz.DisplayResultActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/koalaparty" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="25dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:text="@string/congratulations"
        android:textColor="#ffffff"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_below="@+id/text"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="getResult"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/calculate"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/button"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="restartButton"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/restart"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>